welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:6: error: not found: value in1020
		if(in1020(b))
                   ^